# voorraadhokmap

./: .env.template  .gitignore  Cargo.toml  data.sqlite  docker-compose.yml
migrations/: 20240831134525_init.sql
src/: main.rs  models.rs
src/admin/: mod.rs  templates.rs  utils.rs
src/admin/columns/: columns.rs  mod.rs
src/admin/items/: alias.rs  item.rs  mod.rs
src/middleware/: auth.rs
src/public/: mod.rs  templates.rs
templates/admin/: admin.html  columns.html  crate.html  crates.html  item.html  items.html
templates/public/: crate.html  crates.html  main.html
