[package]
name = "voorraadhok"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde-json"] }
askama_axum = "0.4.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "migrate",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = "0.5.2"
