[package]
name = "voorraadhok"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde-json"] }
askama_axum = "0.4.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
dotenvy = "0.15.7"
envy = "0.4.2"
fake = { version = "2.9.2", features = ["derive"] }
futures-util = "0.3.30"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.2", features = [
  "migrate",
  "runtime-tokio",
  "macros",
  "postgres",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["compression-full", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
